--- a/react_lessons_05/src/App.css
+++ b/react_lessons_05/src/App.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 20px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +36,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.clock {
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.watch, .watch_hours, .watch_minutes, .watch_seconds {
+  position: absolute;
 }
